...
        android:layout_marginStart="20sp"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="20sp"
        android:layout_marginBottom="20sp"
        android:scaleX="1.7"
        android:scaleY="1.3"
        android:src="@drawable/map" />


    <TextView
        android:id="@+id/taper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
        android:textStyle="bold"
        android:layout_marginTop="152dp"
        android:layout_marginLeft="79dp"
        android:text="Salvatori" />

    <TextView
        android:id="@+id/campusCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="8sp"
        android:textStyle="bold"
        android:layout_marginTop="256dp"
        android:layout_marginLeft="84dp"
        android:text="Campus Center" />

    <TextView
        android:id="@+id/fertitta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="4sp"
...
