...
        android:layout_marginTop="30dp"
        />

    <Button
        android:layout_width="380dp"
        android:layout_height="70dp"
        android:id="@+id/signIn"
        android:layout_marginTop="24dp"
        android:text="Sign In"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
...
