...
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight=".5">
                <Button
                    android:id="@+id/map"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="map" />

                <Button
                    android:id="@+id/schedule"
...
